<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/space_8"
    android:paddingHorizontal="@dimen/space_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textViewRegisterHint"
        android:text="@string/register_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/buttonRegister"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintStart_toEndOf="@id/textViewRegisterHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>